Change file names

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <a href="index.html" class="logo-text">Luontokuvausopas</a>
 
       <ul class="nav-links">
-        <li><a href="sub-page1.html">Kameran ja asetusten valinta</a></li>
-        <li><a href="sub-page2.html">Kuvausvinkit ja sommittelu</a></li>
-        <li><a href="sub-page3.html">Kuvankäsittely ja jakaminen</a></li>
+        <li><a href="kameran-valinta.html">Kameran ja asetusten valinta</a></li>
+        <li><a href="kuvausvinkit.html">Kuvausvinkit ja sommittelu</a></li>
+        <li><a href="kuvankasittely.html">Kuvankäsittely ja jakaminen</a></li>
       </ul>
 
       <div class="hamburger">
@@ -46,20 +46,20 @@
       </div>
       <div class="boxes-container">
         <div class="box">
-          <a href="sub-page1.html">
+          <a href="kameran-valinta.html">
             <h3>Kameran ja asetusten valinta</h3>
             <p>Kamera kannattaa olla hyvä ja asetukset kunnossa.</p>
           </a>
         </div>
 
         <div class="box">
-          <a href="sub-page2.html">
+          <a href="kuvausvinkit.html">
             <h3>Kuvausvinkit ja sommittelu</h3>
             <p>Vinkkejä kuvaukseen ja kuvien hyvään sommitteluun.</p>
           </a>
         </div>
         <div class="box">
-          <a href="sub-page3.html">
+          <a href="kuvankasittely.html">
             <h3>Kuvankäsittely ja jakaminen</h3>
             <p>Miten käsitellä kuvat ja jakaa ne muiden nähtäväksi.</p>
           </a>
