--- a/kameran-valinta.html
+++ b/kameran-valinta.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Valokuvauksen Opas</title>
+    <title>Luontokuvausopas</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -11,9 +11,9 @@
       <a href="index.html" class="logo-text">Luontokuvausopas</a>
 
       <ul class="nav-links">
-        <li><a href="sub-page1.html">Kameran ja asetusten valinta</a></li>
-        <li><a href="sub-page2.html">Kuvausvinkit ja sommittelu</a></li>
-        <li><a href="sub-page3.html">Kuvankäsittely ja jakaminen</a></li>
+        <li><a href="kameran-valinta.html">Kameran ja asetusten valinta</a></li>
+        <li><a href="kuvausvinkit.html">Kuvausvinkit ja sommittelu</a></li>
+        <li><a href="kuvankasittely.html">Kuvankäsittely ja jakaminen</a></li>
       </ul>
 
       <div class="hamburger">
